<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology_label"
            android:textSize="16sp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/textViewTechnologyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology_name"
            android:textSize="20sp"
            android:paddingRight="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trail_label"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textViewTrailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trail_name"
            android:textSize="22sp"/>
    </LinearLayout>


</LinearLayout>